feat: course service